kubernetes-in-action-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: kubia
spec:
        replicas: 3
        template:
                metadata:
                        name: kubia
                        labels:
                                app: kubia
                spec:
                        containers:
                        - image: luksa/kubia:v1
                          name: nodejs
                          resources:
                                  requests:
                                          cpu: 100m
        selector:
                matchLabels:
                        app: kubia
