kubernetes-in-action-files/downward-api-env.yaml
apiVersion: v1
kind: Pod
metadata:
        name: downward
spec:
        containers:
        - name: main
          image: busybox
          command: ["sleep", "9999999"]
          resources:
                  requests:
                          cpu: 15m
                          memory: 100Ki
                  limits:
                          cpu: 100m
                          memory: 4Mi
