kubernetes-in-action-files/downward-api-volume.yaml
apiVersion: v1
kind: Pod
metadata:
        name: downward
        labels:
                foo: bar
        annotations:
                key1: value1
                key2: |
                        multi
                        line
                        value
spec:
        containers:
        - name: main
          image: busybox
          command: ["sleep", "9999999"]
          resources:
                  requests:
                          cpu: 15m
                          memory: 100Ki
                  limits:
                          cpu: 100m
                          memory: 4Mi
          volumeMounts:
          - name: downward
            mountPath: /etc/downward
        volumes:
        - name: downward
          downwardAPI:
                  items:
                  - path: "podName"
                    fieldRef:
                            fieldPath: metadata.name
                  - path: "podNamespace"
                    fieldRef:
                            fieldPath: metadata.namespace
                  - path: "labels"
                    fieldRef:
                            fieldPath: metadata.labels
                  - path: "annotations"
                    fieldRef:
                            fieldPath: metadata.annotations
                  - path: "containerCpuRequestMilliCores"
                    resourceFieldRef:
                            containerName: main
                            resource: requests.cpu
                            divisor: 1m
                  - path: "containerMemoryLimitByte"
                    resourceFieldRef:
                            containerName: main
                            resource: limits.memory
                            divisor: 1
