kubernetes-in-action-files/fortune-pod-env-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
        name: fortune-env-from-configmap
spec:
        containers:
        - image: luksa/fortune:env
          name: html-generator
          volumeMounts:
          - name: html
            mountPath: /var/htdocs
        - image: nginx:alpine
          name: web-server
          volumeMounts:
          - name: html
            mountPath: /usr/share/nginx/html
            readOnly: true
          ports:
          - containerPort: 80
            protocol: TCP
        volumes:
        - name: html
          emptyDir:
                  medium: Memory
