kubernetes-in-action-files/kubia-deployment-v3-withreadinesscheck.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: kubia
spec:
        replicas: 3
        selector:
                matchLabels:
                        app: kubia
        minReadySeconds: 10
        strategy:
                rollingUpdate:
                        maxSurge: 1
                        maxUnavailable: 0
                type: RollingUpdate
        template:
                metadata:
                        name: kubia
                        labels:
                                app: kubia
                spec:
                        containers:
                        - image: luksa/kubia:v3
                          name: nodejs
                          readinessProbe:
                                  periodSeconds: 1
                                  httpGet:
                                          path: /
                                          port: 8080
