kubernetes-in-action-files/kubia-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
        name: kubia-gpu
spec:
        nodeSelector:
                gpu: "true"
        containers:
                - image: hattivatt/kubia
                  name: kubia
