kubernetes-in-action-files/kubia-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
        name: kubia
spec:
        serviceName: kubia
        replicas: 2
        selector:
                matchLabels:
                        app: kubia
        template:
                metadata:
                        labels:
                                app: kubia
                spec:
                        containers:
                        - name: kubia
                          image: luksa/kubia-pet
                          ports:
                          - name: http
                            containerPort: 8080
                          volumeMounts:
                          - name: data
                            mountPath: /var/data
        volumeClaimTemplates:
        - metadata:
                name: data
          spec:
                  resources:
                          requests:
                                  storage: 1Mi
                  accessModes:
                  - ReadWriteOnce
