kubernetes-in-action-files/ssd-monitor-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
        name: ssd-monitor
spec:
        selector:
                matchLabels:
                        app: ssd-monitor
        template:
                metadata:
                        labels:
                                app: ssd-monitor
                spec:
                        nodeSelector:
                                disk: ssd
                        containers:
                                - name: main
                                  image: luksa/ssd-monitor
