kubernetes-in-action-files/website-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: website-controller
spec:
        replicas: 1
        template:
                metadata:
                        name: website-controller
                        labels:
                                app: website-controller
                spec:
                        serviceAccountName: website-controller
                        containers:
                        - name: main
                          image: luksa/website-controller
                        - name: proxy
                          image: luksa/kubectl-proxy:1.6.2
        selector:
                matchLabels:
                        app: website-controller
