kubernetes-in-action-files/external-service-endopints.yaml
apiVersion: v1
kind: Endpoints
metadata:
        name: external-service
subsets:
        - addresses:
          - ip: 11.11.11.11
          - ip: 22.22.22.22
          ports:
          - port: 80
