kubernetes-in-action-files/kubia-rc-and-service-v1.yaml
apiVersion: v1
kind: Service
metadata:
        name: kubia
spec:
        type: LoadBalancer
        selector:
                app: kubia
        ports:
        - port: 80
          targetPort: 8080
