kubernetes-in-action-files/kubia-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
        name: kubia
spec:
        clusterIP: None
        selector:
                app: kubia
        ports:
        - name: http
          port: 80
