kubernetes-in-action-files/kubia-service-public.yaml
apiVersion: v1
kind: Service
metadata:
        name: kubia-public
spec:
        selector:
                app: kubia
        ports:
        - port: 80
          targetPort: 8080
